--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="home-card4">
               <div class="home-content-container4">
                 <a
-                  href="https://play.unity.com/mg/other/webgl-builds-340213"
+                  href="https://waste-warriors.vercel.app/"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="home-heading7"
@@ -241,7 +241,7 @@
                 class="home-link11"
               >
                 <img
-                  src="https://jinsaul.github.io/asbbimage"
+                  src="https://jinsaul.github.io/asbbimage.jpg"
                   alt="asbbimage"
                   loading="eager"
                   class="home-image1"
