--- a/index.html
+++ b/index.html
@@ -177,13 +177,15 @@
             </div>
             <div class="home-card1">
               <div class="home-content-container1">
-                <span class="home-heading4 Card-Heading">ARM11 emulator</span>
+                <span class="home-heading4 Card-Heading">
+                  ARM11 assembler &amp; emulator
+                </span>
                 <span class="home-text06">
                   <span>
-                    As part of a group, I wrote an emulator for the ARM86
-                    processor in C. The emulator would take a binary instruction
-                    file and output the state that an ARM86 processor would be
-                    in after executing the instructions.
+                    As part of a group, I wrote an assembler and an emulator for
+                    the ARM86 processor in C. The emulator would take a binary
+                    instruction file and output the state that an ARM86
+                    processor would be in after executing the instructions.
                   </span>
                   <br />
                 </span>
