--- a/index.html
+++ b/index.html
@@ -132,12 +132,17 @@
           <div class="home-hero">
             <div class="home-hero-text-container">
               <h1 class="home-heading2">
-                <span>Budding Software Developer</span>
+                <span>Budding Software Developer, Student</span>
                 <br />
               </h1>
-              <span class="home-text02 Section-Text">
-                Currently a student at Imperial College London, studying
-                Computing
+              <span class="home-text02">
+                <span class="home-text03">
+                  I am constantly looking for ways to improve and with it, for a
+                  problem to solve. My love for learning new skills allows me to
+                  pick up new frameworks and systems in an instant, and brings
+                  me to challenges difficult enough to satisfy me.
+                </span>
+                <br />
               </span>
               <div class="home-cta-btn-container">
                 <a
@@ -146,7 +151,7 @@
                   rel="noreferrer noopener"
                   class="home-cta-btn Anchor button"
                 >
-                  <span class="home-text03">My resume</span>
+                  <span class="home-text05">My resume</span>
                 </a>
               </div>
             </div>
@@ -160,7 +165,7 @@
         </div>
         <div id="Projects" class="home-features">
           <div class="home-heading-container">
-            <h2 class="home-text04 Section-Heading">Projects</h2>
+            <h2 class="home-text06 Section-Heading">Projects</h2>
           </div>
           <div class="home-cards-container">
             <div class="home-card">
@@ -168,7 +173,7 @@
                 <span class="home-heading3 Card-Heading">
                   Workout scheduler
                 </span>
-                <span class="home-text05">
+                <span class="home-text07">
                   I wrote a Windows program that shows you your workout progress
                   and advises you on what to do next. I wrote the GUI using
                   Win32 and C++.
@@ -180,7 +185,7 @@
                 <span class="home-heading4 Card-Heading">
                   ARM11 assembler &amp; emulator
                 </span>
-                <span class="home-text06">
+                <span class="home-text08">
                   <span>
                     As part of a group, I wrote an assembler and an emulator for
                     the ARM86 processor in C. The emulator would take a binary
@@ -196,7 +201,7 @@
                 <span class="home-heading5 Card-Heading">
                   pintOS operating system
                 </span>
-                <span class="home-text09">
+                <span class="home-text11">
                   As part of a group, I wrote features for a small and basic
                   operating system in C. These features include threading, user
                   programs, and virtual memory. The OS could execute user made
@@ -207,7 +212,7 @@
             <div class="home-card3">
               <div class="home-content-container3">
                 <span class="home-heading6 Card-Heading">WACC compiler</span>
-                <span class="home-text10">
+                <span class="home-text12">
                   As part of a group, I wrote a complete compiler for the WACC
                   language. The compiler would take a program written in WACC
                   and output its resulting assembly instructions.
@@ -224,10 +229,10 @@
                 >
                   <span class="Card-Heading">Waste Warriors website</span>
                   <br />
-                  <span class="home-text13">(click to open website)</span>
+                  <span class="home-text15">(click to open website)</span>
                   <br />
                 </a>
-                <span class="home-text15">
+                <span class="home-text17">
                   As part of a group, I created a website using React that
                   allows users to plan community litter picking events. Users
                   can create events and add information about the event or sign
@@ -261,10 +266,10 @@
                       Advanced Swipe Brick Breaker
                     </span>
                     <br />
-                    <span class="home-text18">(click to play game)</span>
+                    <span class="home-text20">(click to play game)</span>
                     <br />
                   </a>
-                  <span class="home-text20">
+                  <span class="home-text22">
                     I recreated Swipe Brick Breaker in Unity and added some new
                     twists to the game, such as set number of new bricks every
                     round, hidden numbers, hidden colours, and more.
@@ -277,7 +282,7 @@
         <div id="Skills" class="home-about">
           <div class="home-max-content-width-container">
             <div class="home-heading-container1">
-              <h1 class="Section-Heading home-text21">Skills</h1>
+              <h1 class="Section-Heading home-text23">Skills</h1>
             </div>
             <div class="home-content-container6">
               <div class="home-about-1">
@@ -287,7 +292,7 @@
                       d="M170 512q0-140 101-241t241-101 241 101 101 241-101 241-241 101-241-101-101-241z"
                     ></path>
                   </svg>
-                  <span class="home-text22">
+                  <span class="home-text24">
                     Programming Languages: C, C++, C#, Java, Scala, JavaScript,
                     Haskell
                   </span>
@@ -298,7 +303,7 @@
                       d="M170 512q0-140 101-241t241-101 241 101 101 241-101 241-241 101-241-101-101-241z"
                     ></path>
                   </svg>
-                  <span class="home-text23">
+                  <span class="home-text25">
                     <span>Spoken Languages: English, Korean, Japanese</span>
                     <br />
                   </span>
@@ -311,7 +316,7 @@
                       d="M170 512q0-140 101-241t241-101 241 101 101 241-101 241-241 101-241-101-101-241z"
                     ></path>
                   </svg>
-                  <span class="home-text26">
+                  <span class="home-text28">
                     Interests besides software: Squash, Badminton, Muay Thai,
                     Taekwondo, Snowboarding, Surfing, Video Games&nbsp;
                   </span>
